revert: proc builder not required, fixed in macro