@@ -14,7 +14,6 @@ import java.io.OutputStreamWriter;
 
 public class BotProcess implements AutoCloseable
 {
-    private final ProcessBuilder processBuilder;
     private final Process child;
 
     private final OutputStreamWriter outputWriter;
@@ -29,8 +28,7 @@ public class BotProcess implements AutoCloseable
     {
         Debug.Print(Debug.DebugMode.Dev, "Starting new bot process with command: %s", command);
 
-        processBuilder = new ProcessBuilder(command);
-        child = processBuilder.start();
+        child = Runtime.getRuntime().exec(command);
 
         inputReader = new StreamGobbler(child.getInputStream());
         errorReader = new StreamGobbler(child.getErrorStream());
